data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_840.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\90\80\80\80\00\01\07\6d\6f\64\75\6c"
    "\65\42\04\66\75\6e\63\00\00\03\82\80\80\80\00\01"
    "\00\0a\8b\80\80\80\00\01\85\80\80\80\00\00\01\10"
    "\00\0b"
  )
""
)